--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
 ! unify config file and top-level command-line options: need to parse config file first, then apply options
+! save entries to local DB so can be uploaded later
+* mac os support
 * colour error output like "logp: error: Expected a command,"
 * gather stdout/stderr -- rate limit their upload
-* save entries to local DB so can be uploaded later
 * configurable timeouts
 * send version info to eventstore
 * tail/cat stdout/stderr
 * way to manually terminate an event
   ? kill
 ? tags
+? windows support
