--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.1.3  2017-03-21
+  * "logp run" collects standard error by default. You can disable
+    this with --no-stderr
+  * "logp run" can optionally collect standard output with --stdout
+
 0.1.2  2017-03-10
   * Mac OS X support
   * Remove libyaml dependency
